# multiagent-incident-response

./: .dockerignore  .env.example  .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  README.md  agent_tests.sh  anonymize.sh  curve.txt  deanonymize.sh  docker-compose.yml  install.sh  integration_tests.sh  js_linter.sh  linter.sh  python_linter.sh  release.sh  type-checker.sh  unit_tests.sh
ccs-response-planner-backend/: LICENSE.md  README.md  make_release.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
ccs-response-planner-backend/src/ccs_response_planner_backend/agents/: anthropic_adapter.py  (+7 more)
ccs-response-planner-backend/tests/: conftest.py  test_abuseipdb_endpoint.py  test_agent_integration.py  test_agent_reports.py  test_agents_endpoint.py  test_constants.py  test_context_utils.py  test_database_facade.py  test_digital_twin_deploy.py  test_digital_twin_endpoint.py  test_digital_twin_validate.py  test_docker_manager.py  test_dt_exec_endpoint.py  test_dt_logs_endpoint.py  test_dt_python_endpoint.py  test_ensure_deployed.py  test_example_endpoint.py  test_example_incidents.py  test_health_endpoint.py  test_information_agent.py  test_information_tools.py  test_llm_endpoint.py  test_login_endpoint.py  test_mitre_endpoint.py  test_nvd_endpoint.py  test_orchestrator_agent.py  test_otx_endpoint.py  test_pentest_endpoint.py  test_plan_endpoint.py  test_plan_verifier_agent.py  test_report_agent.py  test_report_manager_agent.py  test_report_reviewer_agent.py  test_report_tools.py  test_report_verifier_agent.py  test_schemas.py  test_sessions_endpoints.py  test_spa_fallback.py  test_tavily_endpoint.py  test_tools_integration.py  (+2 more)
(+621 files in other folders)
