[metadata]
name = ccs_response_planner_backend
version = attr: ccs_response_planner_backend.__version__
description = Backend for an LLM-based response system
author = Kim Hammar
author_email = hammar.kim@gmail.com
license = Creative Commons Attribution-ShareAlike 4.0 International
keywords = Cyber-Security Large Language Models
license_files =
    - LICENSE.md
    - README.md
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Intended Audience :: Science/Research

[options]
install_requires =
    numpy>=1.23.5
    flask>=3.1.0
    psycopg[binary]>=3.2.4
    bcrypt>=4.2.1
    google-generativeai>=0.8.5
    docker>=7.1.0
    flask-sock>=0.7.0
python_requires = >=3.11
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.6.0
    mypy>=1.7.0
    mypy-extensions>=1.0.0
    flake8>=6.1.0
    flake8-rst-docstrings>=0.3.0
    tox>=4.24.1
    twine>=6.1.0
    build>=0.10.0

[options.package_data]
ccs_response_planner_backend = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,*_pb2*,*init__*,.tox
ignore = E741, W503, W504, F821, W605
rst-roles = class, func, ref
rst-directives = envvar, exception
rst-substitutions = version
extend-ignore = D401, D400, D100, RST305, RST219, D205, D202, D200, D204, RST206, W293, D403, D402, RST306

